--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reduct-mqtt",
   "version": "1.0.0",
-  "description": "Keep MQTT messages in Reduct Storage",
+  "description": "Keep MQTT messages in ReductStore",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -25,6 +25,6 @@
   "dependencies": {
     "async-mqtt": "^2.6.2",
     "mqtt": "^4.3.7",
-    "reduct-js": "^0.7.0"
+    "reduct-js": "^1.2.0"
   }
 }
