--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   reduct-storage:
-    image: reductstore/reductstore:latest
+    image: reduct/store:latest
     volumes:
       - ./data:/data
     ports:
